--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "mocha": "^10.2.0"
+    "knex": "^2.5.1",
+    "mocha": "^10.2.0",
+    "objection": "^3.1.2",
+    "sqlite3": "^5.1.6"
   }
 }
