--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha tests",
-    "start": "node app.js"
+    "start": "node app.js",
+    "bluetooth": "node peripheral.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bleno": "^0.5.0",
     "express": "^4.18.2",
     "knex": "^2.5.1",
     "mocha": "^10.2.0",
