--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bleno": "^0.5.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "johnny-five": "^2.1.0",
     "knex": "^2.5.1",
     "mocha": "^10.2.0",
+    "node-fetch": "^3.3.2",
     "objection": "^3.1.2",
     "sqlite3": "^5.1.6"
   }
