--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-amplify": "^5.3.11",
     "bleno": "^0.5.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
