--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-amplify/auth": "^5.6.5",
+    "axios": "^1.5.1",
     "bleno": "^0.5.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
